<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnChat"
        android:enabled="true"
        android:icon="@drawable/ic_chat_icon"
        android:title="@string/chat"
        app:cnb_backgroundColor="@color/backgroundPurple"
        app:cnb_iconColor="@color/purpleLight"
        app:cnb_textColor="@color/purpleLight" />

    <item
        android:id="@+id/btnContact"
        android:enabled="true"
        android:icon="@drawable/ic_contacts_icon"
        android:title="@string/contact"
        app:cnb_backgroundColor="@color/backgroundPurple"
        app:cnb_iconColor="@color/purpleLight"
        app:cnb_textColor="@color/purpleLight" />

    <item
        android:id="@+id/btnProfile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/backgroundPurple"
        app:cnb_iconColor="@color/purpleLight"
        app:cnb_textColor="@color/purpleLight" />

</menu>