<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEC6FB"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/llSignUpLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpGuideline">

        <ImageView
            android:layout_width="@dimen/dp_400"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/swift_chat_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSignUpLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llSignUpLogo">

                <EditText
                    android:id="@+id/etvFullName"
                    style="@style/login_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:padding="@dimen/dp_15" />

                <EditText
                    android:id="@+id/etvSignUpEmail"
                    style="@style/login_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_e_mail_address"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_15" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etvSignUpPassword"
                        style="@style/login_edittext_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:padding="@dimen/dp_15"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_confirm_password"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etvSignUpConfirmPassword"
                        style="@style/login_edittext_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:padding="@dimen/dp_15"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/etvPhone"
                    style="@style/login_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:padding="@dimen/dp_15" />

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/login_button_style"
                    android:layout_marginTop="@dimen/dp_15"
                    android:backgroundTint="@color/purpleLight"
                    android:padding="@dimen/dp_15"
                    android:text="@string/register"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tvLoginText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        android:textColor="@color/purpleDark"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signUpGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>