<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEC6FB"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/llLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginGuideline">

        <ImageView
            android:layout_width="@dimen/dp_400"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/swift_chat_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/login_to_your_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLoginLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/etvLoginEmail"
                    style="@style/login_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_e_mail_address"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_15" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_password"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etvLoginPassword"
                        style="@style/login_edittext_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:padding="@dimen/dp_15"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/forgotten_password"
                    android:textColor="@color/purpleDark"
                    android:textSize="@dimen/sp_15" />

                <Button
                    android:id="@+id/btnLoginBtn"
                    style="@style/login_button_style"
                    android:layout_marginTop="@dimen/dp_15"
                    android:backgroundTint="@color/purpleLight"
                    android:padding="@dimen/dp_15"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:text="@string/you_don_t_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tvSignUpText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/sign_up"
                        android:textColor="@color/purpleDark"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>