<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPurple"
    tools:context=".fragments.GetUserNumberFragment">

    <ImageView
        android:id="@+id/imgGetNumber"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/swift_chat_logo" />

    <TextView
        android:id="@+id/txtVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgGetNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/verify_your_number"
        android:textColor="@color/purpleLight"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVerify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_number_for_verification"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="150dp"
            android:nestedScrollingEnabled="true"
            android:spinnerMode="dropdown"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true"
            app:ccp_countryPreference="IN"
            app:ccp_defaultPhoneCode="91"
            android:layout_height="@dimen/dp_50"
            app:ccp_autoFormatNumber="true" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/purpleLight" />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/purpleLight"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/purpleLight"
            android:textColorHint="@color/purple_200" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGenerateOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:background="@color/purpleLight"
        android:text="@string/generate_otp"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

</RelativeLayout>